# KF-EBT

./: .gitignore  CMakeLists.txt  KF-EBT.pro  KF-EBT_CamTest.pro  README.md  kfebt.cpp  kfebt.h  kfebtracker.cpp  kfebtracker.h  main.cpp  main_cam.cpp
ASMS/: colotracker.cpp  histogram.h
kcf/: kcf.cpp
trackers/: CMakeLists.txt  btracker.h  tasms.cpp  tasms.h  tcbt.cpp  tcbt.h  tkcf.cpp  tkcf.h  tmosse.cpp  tmosse.h  tncc.cpp  tncc.h  tvdp.cpp  tvdp.h
trackers/ASMS/: Copyright.md  README.md  colotracker.cpp  colotracker.h  histogram.cpp  histogram.h
trackers/CBT/: cbt.cpp  cbt.h  flow.cpp  flow.h
trackers/CBT/consensus/: Consensus.cpp  Consensus.h  README.md  coloravaliation.cpp  coloravaliation.h  common.h
trackers/MOSSE/: mosse.cpp  mosse.h
trackers/NCC/: ncc.cpp  ncc.h
trackers/kcf/: CMakeLists.txt  adjust.cpp  adjust.h  complexmat.hpp  kcf.cpp  kcf.h
trackers/kcf/piotr_fhog/: fhog.hpp  gradientMex.cpp
